--- a/contact.html
+++ b/contact.html
@@ -1,10 +1,202 @@
 ﻿<!DOCTYPE html>
-<html>
+<html lang="en-us">
 <head>
-    <title></title>
-	<meta charset="utf-8" />
+    <title>Home</title>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+    <!-- CSS Files -->
+    <!-- Fonts library -->
+    <link href="stylesheets/fonts.css" rel="stylesheet" />
+    <!-- Bootstrap core CSS -->
+    <link href="stylesheets/bootstrap.min.css" rel="stylesheet" />
+    <!-- Custom css -->
+    <link href="stylesheets/contact.css" rel="stylesheet" />
+    <link href="stylesheets/header_footer.css" rel="stylesheet" />
+    <!-- Master Slider core CSS -->
+    <link href="stylesheets/masterslider.css" rel="stylesheet" />
 </head>
 <body>
+
+    <nav class="navbar navmy-cutom navbar-default navbar-fixed-top">
+        <div class="container">
+            <div class="navbar-header">
+                <!-- For mobile nav -->
+
+                <button type="button" class="navbar-toggle collapsed">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <!-- Logo -->
+                <a class="navbar-brand" href="#">
+                    <img alt="Brand" src="images/MYH_finewines_Logo.png">
+                </a>
+                <div class="lang-cont Mobile">
+                    <a href="index.html" class="lang">ENGLISH</a>|
+                    <a href="#" class="lang">中文 </a>
+                </div>
+            </div>
+            <div class="navbar-collapse" id="navbar-collapse-1">
+                <ul class="nav navbar-nav ">
+                    <li class="current"><a href="index.html">HOME</a></li>
+                    <li><a href="about.html">ABOUT</a></li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">ZALTO GLASSWARE<span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="thebrand.html">THE BRAND</a></li>
+                            <li><a href="theglassware.html">THE GLASSWARE</a></li>
+                            <li><a href="thepraise.html">THE PRAISE</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="contact.html">CONTACT US</a></li>
+                </ul>
+                <div class="lang-cont Desktop">
+                    <a href="index.html" class="lang">ENGLISH</a>|
+                    <a href="#" class="lang">中文 </a>
+                </div>
+            </div>
+        </div><!-- /.container-fluid -->
+    </nav>
+    <section id="contactForm">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                    <h1>Enquiry for Sales or Service —</h1>
+                </div>
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                    <div class="slogan">MYH Fine Wines will provide a very prompt response to your enquiry</div>
+                </div>
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                    <!-- Begin MailChimp Signup Form -->
+                    <div id="mc_embed_signup">
+                        <div>Phone No: 010-65683631</div>
+                        <form action="//myhfinewines.us9.list-manage.com/subscribe/post?u=66d3ca932ee7b025ebb7ede53&amp;id=537cff3299" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                            <div id="mc_embed_signup_scroll">
+                                <div class="row">
+                                    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                                        <div class="mc-field-group">
+                                            <input type="text" value="" name="FNAME" required class="placeholderimit" id="mce-FNAME">
+                                            <label for="mce-FNAME" class="placeholderobj">First Name </label>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                                        <div class="mc-field-group">
+                                            <input type="text" value="" name="LNAME" required class="placeholderimit" id="mce-LNAME">
+                                            <label for="mce-LNAME" class="placeholderobj">Last Name </label>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="mc-field-group">
+                                    <input type="email" value="" required name="EMAIL" class="email placeholderimit" id="mce-EMAIL">
+                                    <label for="mce-EMAIL" class="placeholderobj">Email Address </label>
+                                </div>
+                                <div class="mc-field-group input-group">
+                                    <div class="row">
+                                        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+                                            <input type="radio" value="Consumer" name="MMERGE3" id="mce-MMERGE3-0"><label for="mce-MMERGE3-0">Consumer</label>
+                                            <input type="radio" value="Media" name="MMERGE3" id="mce-MMERGE3-3"><label for="mce-MMERGE3-3">Media</label>
+                                        </div>
+                                        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+                                            <input type="radio" value="Corporate Gifting" name="MMERGE3" id="mce-MMERGE3-1"><label for="mce-MMERGE3-1">Corporate Gifting</label>
+                                            <input type="radio" value="Gastronomy Service" name="MMERGE3" id="mce-MMERGE3-4"><label for="mce-MMERGE3-4">Gastronomy Service</label>
+                                        </div>
+                                        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+                                            <input type="radio" value="Wine Company" name="MMERGE3" id="mce-MMERGE3-2"><label for="mce-MMERGE3-2">Wine Company</label>
+                                            <input type="radio" value="Homeware Retailer" name="MMERGE3" id="mce-MMERGE3-5"><label for="mce-MMERGE3-5">Homeware Retailer</label>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="mc-field-group">
+                                    <input type="text" value="" required name="CNAME" class="placeholderimit" id="mce-CNAME">
+                                    <label for="mce-CNAME" class="placeholderobj">Company Name </label>
+
+                                </div>
+                                <div class="mc-field-group">
+                                    <input type="text" value="" name="TTL" class=" placeholderimit" id="mce-TTL">
+                                    <label for="mce-TTL" class="placeholderobj">Title </label>
+                                </div>
+                                <div class="mc-field-group">
+                                    <input type="text" value="" name="PHN" class=" placeholderimit" id="mce-PHN">
+                                    <label for="mce-PHN" class="placeholderobj">Phone </label>
+                                </div>
+                                <div class="mc-field-group">
+                                    <input type="text" value="" name="ADR" class=" placeholderimit" id="mce-ADR">
+                                    <label for="mce-ADR" class="placeholderobj">Address </label>
+                                </div>
+                                <div class="mc-field-group input-group">
+                                    <ul>
+                                        <li><input type="checkbox" value="1" name="group[20037][1]" id="mce-group[20037]-20037-0"><label for="mce-group[20037]-20037-0">HK</label></li>
+                                        <li><input type="checkbox" value="2" name="group[20037][2]" id="mce-group[20037]-20037-1"><label for="mce-group[20037]-20037-1">Macau</label></li>
+                                        <li><input type="checkbox" value="4" name="group[20037][4]" id="mce-group[20037]-20037-2"><label for="mce-group[20037]-20037-2">Mainland China</label></li>
+                                    </ul>
+                                </div>
+                                <div class="mc-field-group">
+                                    <input type="text" value="" name="CITYNAME" class=" placeholderimit" id="mce-CITYNAME">
+                                    <label for="mce-CITYNAME" class="placeholderobj">Name of City </label>
+                                </div>
+                                <div class="mc-field-group">
+                                    <input type="text" value="" name="WEBS" class="placeholderimit" id="mce-WEBS">
+                                    <label for="mce-WEBS" class="placeholderobj">Website </label>
+                                </div>
+                                <div class="mc-field-group input-group">
+                                    <ul>
+                                        <li><input type="checkbox" value="8" name="group[20041][8]" id="mce-group[20041]-20041-0"><label for="mce-group[20041]-20041-0">Subscribe to Newsletter</label></li>
+                                    </ul>
+                                </div>
+                                <div class="mc-field-group">
+                                    <input type="text" value="" name="ENQ" class="placeholderimit" id="mce-ENQ">
+                                    <label for="mce-ENQ" class="placeholderobj">Enquiry </label>
+                                </div>
+                                <div id="mce-responses" class="clear">
+                                    <div class="response" id="mce-error-response" style="display:none"></div>
+                                    <div class="response" id="mce-success-response" style="display:none"></div>
+                                </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                                <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_66d3ca932ee7b025ebb7ede53_537cff3299" tabindex="-1" value=""></div>
+                                <div class="clear"><input type="submit" value="Submit" name="subscribe" id="mc-embedded-subscribe" class="button contsubbtn"></div>
+                            </div>
+                        </form>
+                    </div>
+                    <!--End mc_embed_signup-->
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-5 col-md-5 col-sm-6 col-xs-6">
+                    <div class="foot-img">
+                        <img src="images/MYH_finewines_Logo_footer.png" alt="MYH" />
+                        <img src="images/zalto denkart_no background_footer.png" alt="Zalto" />
+                    </div>
+                    <div class="foot-txt botMargin">Exclusive Importer and Distributor for Zalto<br /> in Hong Kong, Macau and Mainland China</div>
+                    <div class="foot-txt">© <span style="font-family:'Roboto-Light';">2015</span> MYH Fine Wines.</div>
+                </div>
+                <div class="col-lg-7 col-md-7 col-sm-6 col-xs-6">
+                    <div class="row">
+                        <div class="col-lg-7 col-md-7 col-sm-12 col-xs-12">
+                            <div class="foot-cont-txt margtp"><span style="font-family:'Raleway-Medium'">Hong Kong/Macau:</span><br />Ming Ying Hui (Hong Kong) Trading Ltd.<br /> 銘英會(香港)貿易有限公司</div>
+                            <div class="foot-cont-txt" style="margin-bottom:0;"><span style="font-family:'Raleway-Medium'">Mainland China:</span><br />Ming Ying Hui (Beijing) Trading Ltd.<br /> 銘英會(北京)貿易有限公司</div>
+                        </div>
+                        <div class="col-lg-5 col-md-5 col-sm-12 col-xs-12">
+                            <div class="foot-info-txt botMargin2 margtp">Hong Kong<span style="font-family:'Roboto-Light';">+852 8120 7488</span> <br />Mainland China <span style="font-family:'Roboto-Light';">+86 (10) 6568 3631</span></div>
+                            <div class="foot-info-txt">sales@myhfinewines.com<br />www.myhfinewines.com</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!-- Bootstrap core JS -->
+    <script src="javascripts/jquery-1.11.3.min.js"></script>
+    <script src="javascripts/jquery-migrate-1.2.1.min.js"></script>
+    <script src="javascripts/bootstrap.min.js"></script>
+    <!-- Java Script area -->
+    <script src="javascripts/contact.js"></script>
+    <script src="javascripts/custom.js"></script>
+
 
 </body>
 </html>
