--- a/index.html
+++ b/index.html
@@ -157,7 +157,8 @@
                     <h2>zalto glassware</h2>
                 </div>
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                    <div class="slogan">Lorem ipsum dolor sit amet consectetur adipiscing elit</div>
+                    <div class="slogan" style="margin-bottom:0">In the opinion of many, simply the best wine glassware in the world</div>
+                    <div class="hyper"><a href="theglassware.html" class="underline">View All Zalto Glassware</a><a href="theglassware.html" class="not-under"><span> ></span></a></div>
                 </div>
             </div>
             <div class="row">
@@ -301,7 +302,8 @@
     <section id="subscr">
         <div class="container">
             <div class="row">
-                <h3>Signup for Newsletter</h3>
+                <h3 style="margin-bottom:16px">Signup for Newsletter</h3>
+                <div class="udertext">Receive exclusive offerings. Privacy Guaranteed</div>
             </div>
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
@@ -324,10 +326,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 ">
-                    <h3>Discovering the process</h3>
+                    <h3>Discover zalto craftmanship</h3>
                 </div>
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 ">
-                    <div class="slogan">Lorem ipsum dolor sit amet consectetur adipiscing elit</div>
+                    <div class="slogan">Watch the master glass artists at work</div>
                 </div>
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 ">
                     <div class="videoContainer">
@@ -345,10 +347,20 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 ">
-                    <h3>About the brand</h3>
+                    <h3>The Zalto brand</h3>
                 </div>
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 ">
-                    <div class="aboutTxt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent augue orci, aliquam sit amet nisi a, luctus dignissim augue. Maecenas porttitor, enim sed malesuada pharetra, nunc justo faucibus massa, quis varius nulla mauris nec sapien. Donec ultrices tincidunt nibh semper rhoncus. Nulla ut finibus ligula. Pellentesque vitae lorem fermentum, mollis lacus nec, congue nibh. Nam lorem ligula, ultrices in lectus ut, tincidunt consectetur ligula</div>
+                    <div class="aboutTxt">The beautiful line of handcrafted Zalto Denk'Art glasses, elevates your daily wine experience. From wine novices to serious collectors and wine professionals, Zalto has garnered a passionate and loyal following worldwide. Join us in a toast and discover the excellence of Zalto glasses.</div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-4 col-md-3"></div>
+                <div class="col-lg-2 col-md-3 col-sm-12 col-xs-12">
+                    <div class="brand-btn"><a href="thebrand.html">Discover Zalto</a></div>
+                </div>
+                <div class="col-lg-2 col-md-3 col-sm-12 col-xs-12">
+                    <div class="praise-btn"><a href="thepraise.html">Zalto praise</a></div>
+
                 </div>
             </div>
         </div>
@@ -362,16 +374,16 @@
                         <img src="images/zalto denkart_no background_footer.png" alt="Zalto" />
                     </div>
                     <div class="foot-txt botMargin">Exclusive Importer and Distributor for Zalto<br /> in Hong Kong, Macau and Mainland China</div>
-                    <div class="foot-txt">© <span style="font-family:'Roboto-Light';">2015</span> MYH Fine Wines. All rights reserved.</div>
+                    <div class="foot-txt">© <span style="font-family:'Roboto-Light';">2015</span> MYH Fine Wines.</div>
                 </div>
                 <div class="col-lg-7 col-md-7 col-sm-6 col-xs-6">
                     <div class="row">
                         <div class="col-lg-7 col-md-7 col-sm-12 col-xs-12">
                             <div class="foot-cont-txt margtp"><span style="font-family:'Raleway-Medium'">Hong Kong/Macau:</span><br />Ming Ying Hui (Hong Kong) Trading Ltd.<br /> 銘英會(香港)貿易有限公司</div>
-                            <div class="foot-cont-txt" style="margin-bottom:0;"><span style="font-family:'Raleway-Medium'">Mainland China:</span><br />Ming Ying Hui (Beijing) Trading Ltd.<br /> 銘英會(香港)貿易有限公司</div>
+                            <div class="foot-cont-txt" style="margin-bottom:0;"><span style="font-family:'Raleway-Medium'">Mainland China:</span><br />Ming Ying Hui (Beijing) Trading Ltd.<br /> 銘英會(北京)貿易有限公司</div>
                         </div>
-                        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-                            <div class="foot-info-txt botMargin2 margtp">+<span style="font-family:'Roboto-Light';">86 158 1005 3940</span> (Mandarin/English)<br /><span style="font-family:'Roboto-Light';">+852 8120 7488</span> (English)</div>
+                        <div class="col-lg-5 col-md-5 col-sm-12 col-xs-12">
+                            <div class="foot-info-txt botMargin2 margtp">Hong Kong<span style="font-family:'Roboto-Light';">+852 8120 7488</span> <br />Mainland China <span style="font-family:'Roboto-Light';">+86 (10) 6568 3631</span></div>
                             <div class="foot-info-txt">sales@myhfinewines.com<br />www.myhfinewines.com</div>
                         </div>
                     </div>
