--- a/thebrand.html
+++ b/thebrand.html
@@ -68,7 +68,7 @@
                     <div class="infoblock">
                         <div class="verticalAligne">
                             <h2>HISTORY</h2>
-                            <div class="maintxt">In the northern part of Lower-Austria the tradition of glass blowing goes back to the early 14th century. The Zalto family, a glassmaking dynasty whose roots reach back to Venice, settled down in this region six generations ago. Since then Zalto has been producing high quality mouth-blown glass in Neunagelberg and has made a name for itself among bon vivants beyond all borders.</div>
+                            <div class="maintxt">In the northern part of Lower-Austria, the tradition of glass blowing goes back to the early 14th century. The Zalto family, a glassmaking dynasty whose roots reach back to Venice, settled down in this region six generations ago. Since then, Zalto has been producing high quality mouth-blown glass in Neunagelberg and has made a name for itself among bon vivants beyond all borders.</div>
                         </div>
                     </div>
                 </div>
@@ -81,7 +81,7 @@
                     <div class="infoblock">
                         <div class="verticalAligne">
                             <h2>DENK’ART DESIGN</h2>
-                            <div class="maintxt">The Zalto Denk'Art Glasses were named for Father Hans Denk, the Austrian wine priest who has spent decades in the study and tasting of wines, and is one of the most valued wine experts in Austria. Father Denk guided the glassmakers in the design of each bowl to elicite the best qualities for the type or style of wine it is meant for.</div>
+                            <div class="maintxt">The Zalto Denk'Art Glasses were named after Father Hans Denk, the Austrian wine priest who has spent decades in the study and tasting of wines, and is one of the most valued wine experts in Austria. Father Denk guided the glassmakers in the design of each bowl to elicite the best qualities for the type or style of wine it is meant for.</div>
                         </div>
                     </div>
                 </div>
@@ -146,7 +146,7 @@
                     <div class="infoblock">
                         <div class="verticalAligne">
                             <h2>PROFESSIONAL RECOGNITION</h2>
-                            <div class="maintxt">In December 2009 Stern magazine of Germany conducted the most comprehensive and independent testing thus far of the world's finest wine stemware. The testing was in ‘blind' conditions. The judges tasted the same three wines out of 10 different glasses.  The Professional Jury voted Zalto as the finest glass for all three wines tasted, receiving three 1st Place awards. </div>
+                            <div class="maintxt">In December 2009, Stern magazine of Germany conducted the most comprehensive and independent testing thus far of the world's finest wine stemware. The testing was in ‘blind' conditions. The judges tasted the same three wines out of 10 different glasses.  The Professional Jury voted Zalto as the finest glass for all three wines tasted, receiving three 1st Place awards. </div>
                         </div>
                     </div>
                 </div>
@@ -275,16 +275,16 @@
                         <img src="images/zalto denkart_no background_footer.png" alt="Zalto" />
                     </div>
                     <div class="foot-txt botMargin">Exclusive Importer and Distributor for Zalto<br /> in Hong Kong, Macau and Mainland China</div>
-                    <div class="foot-txt">© <span style="font-family:'Roboto-Light';">2015</span> MYH Fine Wines. All rights reserved.</div>
+                    <div class="foot-txt">© <span style="font-family:'Roboto-Light';">2015</span> MYH Fine Wines.</div>
                 </div>
                 <div class="col-lg-7 col-md-7 col-sm-6 col-xs-6">
                     <div class="row">
                         <div class="col-lg-7 col-md-7 col-sm-12 col-xs-12">
                             <div class="foot-cont-txt margtp"><span style="font-family:'Raleway-Medium'">Hong Kong/Macau:</span><br />Ming Ying Hui (Hong Kong) Trading Ltd.<br /> 銘英會(香港)貿易有限公司</div>
-                            <div class="foot-cont-txt" style="margin-bottom:0;"><span style="font-family:'Raleway-Medium'">Mainland China:</span><br />Ming Ying Hui (Beijing) Trading Ltd.<br /> 銘英會(香港)貿易有限公司</div>
+                            <div class="foot-cont-txt" style="margin-bottom:0;"><span style="font-family:'Raleway-Medium'">Mainland China:</span><br />Ming Ying Hui (Beijing) Trading Ltd.<br /> 銘英會(北京)貿易有限公司</div>
                         </div>
-                        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-                            <div class="foot-info-txt botMargin2 margtp">+<span style="font-family:'Roboto-Light';">86 158 1005 3940</span> (Mandarin/English)<br /><span style="font-family:'Roboto-Light';">+852 8120 7488</span> (English)</div>
+                        <div class="col-lg-5 col-md-5 col-sm-12 col-xs-12">
+                            <div class="foot-info-txt botMargin2 margtp">Hong Kong<span style="font-family:'Roboto-Light';">+852 8120 7488</span> <br />Mainland China <span style="font-family:'Roboto-Light';">+86 (10) 6568 3631</span></div>
                             <div class="foot-info-txt">sales@myhfinewines.com<br />www.myhfinewines.com</div>
                         </div>
                     </div>
