--- a/theglassware.html
+++ b/theglassware.html
@@ -98,7 +98,7 @@
                 <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 grav-cont">
                     <div class="grav-desc verticalAligne">
                         <h2>Gravitas omega</h2>
-                        <div class="grav-txt">For elegant red and white wines. A very different way to experience and interact with wines during tasting. Also makes a very unique gift for wine lovers. The dinted bowl keeps the glass stable</div>
+                        <div class="grav-txt">For elegant red and white wines. A very different way to experience and interact with wines during tasting. Also makes a very unique gift for wine lovers. The dinted bowl keeps the glass stable.</div>
                         <div class="grav-subline">Volume : <span class="grav-number">960</span>ml</div>
                     </div>
                 </div>
@@ -343,16 +343,16 @@
                         <img src="images/zalto denkart_no background_footer.png" alt="Zalto" />
                     </div>
                     <div class="foot-txt botMargin">Exclusive Importer and Distributor for Zalto<br /> in Hong Kong, Macau and Mainland China</div>
-                    <div class="foot-txt">© <span style="font-family:'Roboto-Light';">2015</span> MYH Fine Wines. All rights reserved.</div>
+                    <div class="foot-txt">© <span style="font-family:'Roboto-Light';">2015</span> MYH Fine Wines.</div>
                 </div>
                 <div class="col-lg-7 col-md-7 col-sm-6 col-xs-6">
                     <div class="row">
                         <div class="col-lg-7 col-md-7 col-sm-12 col-xs-12">
                             <div class="foot-cont-txt margtp"><span style="font-family:'Raleway-Medium'">Hong Kong/Macau:</span><br />Ming Ying Hui (Hong Kong) Trading Ltd.<br /> 銘英會(香港)貿易有限公司</div>
-                            <div class="foot-cont-txt" style="margin-bottom:0;"><span style="font-family:'Raleway-Medium'">Mainland China:</span><br />Ming Ying Hui (Beijing) Trading Ltd.<br /> 銘英會(香港)貿易有限公司</div>
+                            <div class="foot-cont-txt" style="margin-bottom:0;"><span style="font-family:'Raleway-Medium'">Mainland China:</span><br />Ming Ying Hui (Beijing) Trading Ltd.<br /> 銘英會(北京)貿易有限公司</div>
                         </div>
-                        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-                            <div class="foot-info-txt botMargin2 margtp">+<span style="font-family:'Roboto-Light';">86 158 1005 3940</span> (Mandarin/English)<br /><span style="font-family:'Roboto-Light';">+852 8120 7488</span> (English)</div>
+                        <div class="col-lg-5 col-md-5 col-sm-12 col-xs-12">
+                            <div class="foot-info-txt botMargin2 margtp">Hong Kong<span style="font-family:'Roboto-Light';">+852 8120 7488</span> <br />Mainland China <span style="font-family:'Roboto-Light';">+86 (10) 6568 3631</span></div>
                             <div class="foot-info-txt">sales@myhfinewines.com<br />www.myhfinewines.com</div>
                         </div>
                     </div>
